Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1298,7 +1298,10 @@
       "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 44.24715909090909\tLoss: 8.712\n",
       "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 64.20454545454545\tLoss: 3.753\n",
       "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 84.8721590909091\tLoss: 0.946\n",
-      "Coord: [-0.1  0.1]\tAcc: 123\tLoss: 0.187\r"
+      "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 96.94602272727273\tLoss: 0.11\n",
+      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 97.9403409090909\tLoss: 0.072\n",
+      "count: 244\tCoord: [0.3 0.1]\t\tAcc: 90.26988636363636\tLoss: 0.453\n",
+      "Coord: [0.4 0.1]\tAcc: 102\tLoss: 1.296\r"
      ]
     }
    ],
