Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1301,7 +1301,9 @@
       "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 96.94602272727273\tLoss: 0.11\n",
       "count: 242\tCoord: [0.1 0.1]\t\tAcc: 97.9403409090909\tLoss: 0.072\n",
       "count: 244\tCoord: [0.3 0.1]\t\tAcc: 90.26988636363636\tLoss: 0.453\n",
-      "Coord: [0.4 0.1]\tAcc: 102\tLoss: 1.296\r"
+      "count: 246\tCoord: [0.5 0.1]\t\tAcc: 70.24147727272727\tLoss: 2.432\n",
+      "count: 248\tCoord: [0.7 0.1]\t\tAcc: 49.14772727272727\tLoss: 7.588\n",
+      "count: 250\tCoord: [0.9 0.1]\t\tAcc: 33.80681818181818\tLoss: 15.826\n"
      ]
     }
    ],
