Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1305,6 +1305,15 @@
       "count: 248\tCoord: [0.7 0.1]\t\tAcc: 49.14772727272727\tLoss: 7.588\n",
       "count: 250\tCoord: [0.9 0.1]\t\tAcc: 33.80681818181818\tLoss: 15.826\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 19.957386363636363\tLoss: 29.825\n",
+      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 33.23863636363637\tLoss: 14.75\n",
+      "Coord: [-0.7  0.2]\tAcc: 57\tLoss: 9.7546\r"
+     ]
     }
    ],
    "source": [
