--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1312,7 +1312,9 @@
      "text": [
       "count: 252\tCoord: [-1.   0.2]\t\tAcc: 19.957386363636363\tLoss: 29.825\n",
       "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 33.23863636363637\tLoss: 14.75\n",
-      "Coord: [-0.7  0.2]\tAcc: 57\tLoss: 9.7546\r"
+      "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 49.21875\tLoss: 7.321\n",
+      "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 69.46022727272727\tLoss: 2.85\n",
+      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 87.92613636363636\tLoss: 0.631\n"
      ]
     }
    ],
