Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1314,7 +1314,10 @@
       "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 33.23863636363637\tLoss: 14.75\n",
       "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 49.21875\tLoss: 7.321\n",
       "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 69.46022727272727\tLoss: 2.85\n",
-      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 87.92613636363636\tLoss: 0.631\n"
+      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 87.92613636363636\tLoss: 0.631\n",
+      "count: 262\tCoord: [0.  0.2]\t\tAcc: 96.09375\tLoss: 0.159\n",
+      "count: 264\tCoord: [0.2 0.2]\t\tAcc: 92.75568181818181\tLoss: 0.331\n",
+      "Coord: [0.3 0.2]\tAcc: 111\tLoss: 0.995\r"
      ]
     }
    ],
