Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1317,7 +1317,10 @@
       "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 87.92613636363636\tLoss: 0.631\n",
       "count: 262\tCoord: [0.  0.2]\t\tAcc: 96.09375\tLoss: 0.159\n",
       "count: 264\tCoord: [0.2 0.2]\t\tAcc: 92.75568181818181\tLoss: 0.331\n",
-      "Coord: [0.3 0.2]\tAcc: 111\tLoss: 0.995\r"
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 79.61647727272727\tLoss: 1.465\n",
+      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 57.03125\tLoss: 5.091\n",
+      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 39.63068181818182\tLoss: 11.865\n",
+      "Coord: [0.9 0.2]\tAcc: 36\tLoss: 18.525\r"
      ]
     }
    ],
