--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1320,7 +1320,9 @@
       "count: 266\tCoord: [0.4 0.2]\t\tAcc: 79.61647727272727\tLoss: 1.465\n",
       "count: 268\tCoord: [0.6 0.2]\t\tAcc: 57.03125\tLoss: 5.091\n",
       "count: 270\tCoord: [0.8 0.2]\t\tAcc: 39.63068181818182\tLoss: 11.865\n",
-      "Coord: [0.9 0.2]\tAcc: 36\tLoss: 18.525\r"
+      "count: 272\tCoord: [1.  0.2]\t\tAcc: 27.05965909090909\tLoss: 21.246\n",
+      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 21.661931818181817\tLoss: 24.399\n",
+      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 36.43465909090909\tLoss: 12.682\n"
      ]
     }
    ],
