--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1322,7 +1322,10 @@
       "count: 270\tCoord: [0.8 0.2]\t\tAcc: 39.63068181818182\tLoss: 11.865\n",
       "count: 272\tCoord: [1.  0.2]\t\tAcc: 27.05965909090909\tLoss: 21.246\n",
       "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 21.661931818181817\tLoss: 24.399\n",
-      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 36.43465909090909\tLoss: 12.682\n"
+      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 36.43465909090909\tLoss: 12.682\n",
+      "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 53.26704545454545\tLoss: 6.34\n",
+      "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 72.3721590909091\tLoss: 2.417\n",
+      "Coord: [-0.2  0.3]\tAcc: 102\tLoss: 1.279\r"
      ]
     }
    ],
