Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1325,7 +1325,9 @@
       "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 36.43465909090909\tLoss: 12.682\n",
       "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 53.26704545454545\tLoss: 6.34\n",
       "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 72.3721590909091\tLoss: 2.417\n",
-      "Coord: [-0.2  0.3]\tAcc: 102\tLoss: 1.279\r"
+      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 86.57670454545455\tLoss: 0.752\n",
+      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 90.26988636363636\tLoss: 0.522\n",
+      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 82.88352272727273\tLoss: 1.179\n"
      ]
     }
    ],
