Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1327,7 +1327,10 @@
       "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 72.3721590909091\tLoss: 2.417\n",
       "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 86.57670454545455\tLoss: 0.752\n",
       "count: 284\tCoord: [0.1 0.3]\t\tAcc: 90.26988636363636\tLoss: 0.522\n",
-      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 82.88352272727273\tLoss: 1.179\n"
+      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 82.88352272727273\tLoss: 1.179\n",
+      "count: 288\tCoord: [0.5 0.3]\t\tAcc: 63.63636363636363\tLoss: 3.634\n",
+      "count: 290\tCoord: [0.7 0.3]\t\tAcc: 44.74431818181818\tLoss: 9.069\n",
+      "Coord: [0.8 0.3]\tAcc: 47\tLoss: 14.392\r"
      ]
     }
    ],
