Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1330,7 +1330,9 @@
       "count: 286\tCoord: [0.3 0.3]\t\tAcc: 82.88352272727273\tLoss: 1.179\n",
       "count: 288\tCoord: [0.5 0.3]\t\tAcc: 63.63636363636363\tLoss: 3.634\n",
       "count: 290\tCoord: [0.7 0.3]\t\tAcc: 44.74431818181818\tLoss: 9.069\n",
-      "Coord: [0.8 0.3]\tAcc: 47\tLoss: 14.392\r"
+      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 31.818181818181817\tLoss: 17.598\n",
+      "count: 294\tCoord: [-1.   0.4]\t\tAcc: 15.696022727272727\tLoss: 40.789\n",
+      "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 25.78125\tLoss: 21.222\n"
      ]
     }
    ],
