Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1332,7 +1332,10 @@
       "count: 290\tCoord: [0.7 0.3]\t\tAcc: 44.74431818181818\tLoss: 9.069\n",
       "count: 292\tCoord: [0.9 0.3]\t\tAcc: 31.818181818181817\tLoss: 17.598\n",
       "count: 294\tCoord: [-1.   0.4]\t\tAcc: 15.696022727272727\tLoss: 40.789\n",
-      "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 25.78125\tLoss: 21.222\n"
+      "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 25.78125\tLoss: 21.222\n",
+      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 40.05681818181818\tLoss: 11.397\n",
+      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 54.97159090909091\tLoss: 5.788\n",
+      "Coord: [-0.2  0.4]\tAcc: 92\tLoss: 2.104\r"
      ]
     }
    ],
