Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1335,7 +1335,10 @@
       "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 25.78125\tLoss: 21.222\n",
       "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 40.05681818181818\tLoss: 11.397\n",
       "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 54.97159090909091\tLoss: 5.788\n",
-      "Coord: [-0.2  0.4]\tAcc: 92\tLoss: 2.104\r"
+      "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 71.09375\tLoss: 2.54\n",
+      "count: 304\tCoord: [0.  0.4]\t\tAcc: 82.5284090909091\tLoss: 1.243\n",
+      "count: 306\tCoord: [0.2 0.4]\t\tAcc: 79.61647727272727\tLoss: 1.428\n",
+      "Coord: [0.3 0.4]\tAcc: 95\tLoss: 2.0216\r"
      ]
     }
    ],
