Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1338,7 +1338,9 @@
       "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 71.09375\tLoss: 2.54\n",
       "count: 304\tCoord: [0.  0.4]\t\tAcc: 82.5284090909091\tLoss: 1.243\n",
       "count: 306\tCoord: [0.2 0.4]\t\tAcc: 79.61647727272727\tLoss: 1.428\n",
-      "Coord: [0.3 0.4]\tAcc: 95\tLoss: 2.0216\r"
+      "count: 308\tCoord: [0.4 0.4]\t\tAcc: 66.05113636363636\tLoss: 3.061\n",
+      "count: 310\tCoord: [0.6 0.4]\t\tAcc: 50.28409090909091\tLoss: 7.16\n",
+      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 34.80113636363637\tLoss: 14.522\n"
      ]
     }
    ],
