--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1340,7 +1340,10 @@
       "count: 306\tCoord: [0.2 0.4]\t\tAcc: 79.61647727272727\tLoss: 1.428\n",
       "count: 308\tCoord: [0.4 0.4]\t\tAcc: 66.05113636363636\tLoss: 3.061\n",
       "count: 310\tCoord: [0.6 0.4]\t\tAcc: 50.28409090909091\tLoss: 7.16\n",
-      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 34.80113636363637\tLoss: 14.522\n"
+      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 34.80113636363637\tLoss: 14.522\n",
+      "count: 314\tCoord: [1.  0.4]\t\tAcc: 24.857954545454547\tLoss: 25.462\n",
+      "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 17.400568181818183\tLoss: 35.431\n",
+      "Coord: [-0.8  0.5]\tAcc: 29\tLoss: 22.978\r"
      ]
     }
    ],
