--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1343,7 +1343,9 @@
       "count: 312\tCoord: [0.8 0.4]\t\tAcc: 34.80113636363637\tLoss: 14.522\n",
       "count: 314\tCoord: [1.  0.4]\t\tAcc: 24.857954545454547\tLoss: 25.462\n",
       "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 17.400568181818183\tLoss: 35.431\n",
-      "Coord: [-0.8  0.5]\tAcc: 29\tLoss: 22.978\r"
+      "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 28.40909090909091\tLoss: 19.34\n",
+      "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 39.55965909090909\tLoss: 11.031\n",
+      "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 54.90056818181818\tLoss: 5.801\n"
      ]
     }
    ],
