--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1345,7 +1345,10 @@
       "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 17.400568181818183\tLoss: 35.431\n",
       "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 28.40909090909091\tLoss: 19.34\n",
       "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 39.55965909090909\tLoss: 11.031\n",
-      "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 54.90056818181818\tLoss: 5.801\n"
+      "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 54.90056818181818\tLoss: 5.801\n",
+      "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 68.03977272727273\tLoss: 3.068\n",
+      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 72.23011363636364\tLoss: 2.379\n",
+      "Coord: [0.2 0.5]\tAcc: 79\tLoss: 2.9951\r"
      ]
     }
    ],
