Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1348,7 +1348,9 @@
       "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 54.90056818181818\tLoss: 5.801\n",
       "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 68.03977272727273\tLoss: 3.068\n",
       "count: 326\tCoord: [0.1 0.5]\t\tAcc: 72.23011363636364\tLoss: 2.379\n",
-      "Coord: [0.2 0.5]\tAcc: 79\tLoss: 2.9951\r"
+      "count: 328\tCoord: [0.3 0.5]\t\tAcc: 63.84943181818182\tLoss: 3.381\n",
+      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 51.98863636363637\tLoss: 6.464\n",
+      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 38.13920454545455\tLoss: 12.811\n"
      ]
     }
    ],
