--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1350,7 +1350,10 @@
       "count: 326\tCoord: [0.1 0.5]\t\tAcc: 72.23011363636364\tLoss: 2.379\n",
       "count: 328\tCoord: [0.3 0.5]\t\tAcc: 63.84943181818182\tLoss: 3.381\n",
       "count: 330\tCoord: [0.5 0.5]\t\tAcc: 51.98863636363637\tLoss: 6.464\n",
-      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 38.13920454545455\tLoss: 12.811\n"
+      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 38.13920454545455\tLoss: 12.811\n",
+      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 28.125\tLoss: 22.637\n",
+      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 12.571022727272727\tLoss: 57.968\n",
+      "Coord: [-0.8  0.6]\tAcc: 26\tLoss: 33.147\r"
      ]
     }
    ],
