Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1353,7 +1353,10 @@
       "count: 332\tCoord: [0.7 0.5]\t\tAcc: 38.13920454545455\tLoss: 12.811\n",
       "count: 334\tCoord: [0.9 0.5]\t\tAcc: 28.125\tLoss: 22.637\n",
       "count: 336\tCoord: [-1.   0.6]\t\tAcc: 12.571022727272727\tLoss: 57.968\n",
-      "Coord: [-0.8  0.6]\tAcc: 26\tLoss: 33.147\r"
+      "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 20.241477272727273\tLoss: 32.565\n",
+      "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 28.693181818181817\tLoss: 18.626\n",
+      "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 38.63636363636363\tLoss: 11.177\n",
+      "Coord: [-0.3  0.6]\tAcc: 53\tLoss: 9.716\r"
      ]
     }
    ],
