--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1356,7 +1356,9 @@
       "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 20.241477272727273\tLoss: 32.565\n",
       "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 28.693181818181817\tLoss: 18.626\n",
       "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 38.63636363636363\tLoss: 11.177\n",
-      "Coord: [-0.3  0.6]\tAcc: 53\tLoss: 9.716\r"
+      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 51.49147727272727\tLoss: 6.519\n",
+      "count: 346\tCoord: [0.  0.6]\t\tAcc: 59.23295454545455\tLoss: 4.496\n",
+      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 58.38068181818182\tLoss: 4.761\n"
      ]
     }
    ],
