Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1358,7 +1358,10 @@
       "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 38.63636363636363\tLoss: 11.177\n",
       "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 51.49147727272727\tLoss: 6.519\n",
       "count: 346\tCoord: [0.  0.6]\t\tAcc: 59.23295454545455\tLoss: 4.496\n",
-      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 58.38068181818182\tLoss: 4.761\n"
+      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 58.38068181818182\tLoss: 4.761\n",
+      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 48.4375\tLoss: 7.168\n",
+      "count: 352\tCoord: [0.6 0.6]\t\tAcc: 38.63636363636363\tLoss: 12.048\n",
+      "Coord: [0.7 0.6]\tAcc: 41\tLoss: 16.851\r"
      ]
     }
    ],
