--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1361,7 +1361,9 @@
       "count: 348\tCoord: [0.2 0.6]\t\tAcc: 58.38068181818182\tLoss: 4.761\n",
       "count: 350\tCoord: [0.4 0.6]\t\tAcc: 48.4375\tLoss: 7.168\n",
       "count: 352\tCoord: [0.6 0.6]\t\tAcc: 38.63636363636363\tLoss: 12.048\n",
-      "Coord: [0.7 0.6]\tAcc: 41\tLoss: 16.851\r"
+      "count: 354\tCoord: [0.8 0.6]\t\tAcc: 29.332386363636363\tLoss: 21.109\n",
+      "count: 356\tCoord: [1.  0.6]\t\tAcc: 21.946022727272727\tLoss: 33.56\n",
+      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 13.494318181818182\tLoss: 52.587\n"
      ]
     }
    ],
