Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1363,7 +1363,10 @@
       "count: 352\tCoord: [0.6 0.6]\t\tAcc: 38.63636363636363\tLoss: 12.048\n",
       "count: 354\tCoord: [0.8 0.6]\t\tAcc: 29.332386363636363\tLoss: 21.109\n",
       "count: 356\tCoord: [1.  0.6]\t\tAcc: 21.946022727272727\tLoss: 33.56\n",
-      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 13.494318181818182\tLoss: 52.587\n"
+      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 13.494318181818182\tLoss: 52.587\n",
+      "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 18.75\tLoss: 31.389\n",
+      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 27.769886363636363\tLoss: 19.65\n",
+      "Coord: [-0.4  0.7]\tAcc: 41\tLoss: 15.567\r"
      ]
     }
    ],
