Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1366,7 +1366,10 @@
       "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 13.494318181818182\tLoss: 52.587\n",
       "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 18.75\tLoss: 31.389\n",
       "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 27.769886363636363\tLoss: 19.65\n",
-      "Coord: [-0.4  0.7]\tAcc: 41\tLoss: 15.567\r"
+      "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 36.22159090909091\tLoss: 12.315\n",
+      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 44.74431818181818\tLoss: 8.553\n",
+      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 46.66193181818182\tLoss: 7.597\n",
+      "Coord: [0.2 0.7]\tAcc: 52\tLoss: 9.119\r"
      ]
     }
    ],
