Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1369,7 +1369,9 @@
       "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 36.22159090909091\tLoss: 12.315\n",
       "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 44.74431818181818\tLoss: 8.553\n",
       "count: 368\tCoord: [0.1 0.7]\t\tAcc: 46.66193181818182\tLoss: 7.597\n",
-      "Coord: [0.2 0.7]\tAcc: 52\tLoss: 9.119\r"
+      "count: 370\tCoord: [0.3 0.7]\t\tAcc: 43.18181818181818\tLoss: 9.099\n",
+      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 36.86079545454545\tLoss: 13.205\n",
+      "Coord: [0.7 0.7]\tAcc: 37\tLoss: 22.608\r"
      ]
     }
    ],
