--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1371,7 +1371,10 @@
       "count: 368\tCoord: [0.1 0.7]\t\tAcc: 46.66193181818182\tLoss: 7.597\n",
       "count: 370\tCoord: [0.3 0.7]\t\tAcc: 43.18181818181818\tLoss: 9.099\n",
       "count: 372\tCoord: [0.5 0.7]\t\tAcc: 36.86079545454545\tLoss: 13.205\n",
-      "Coord: [0.7 0.7]\tAcc: 37\tLoss: 22.608\r"
+      "count: 374\tCoord: [0.7 0.7]\t\tAcc: 29.19034090909091\tLoss: 20.987\n",
+      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 23.011363636363637\tLoss: 32.573\n",
+      "count: 378\tCoord: [-1.   0.8]\t\tAcc: 10.866477272727273\tLoss: 78.931\n",
+      "Coord: [-0.9  0.8]\tAcc: 15\tLoss: 57.673\r"
      ]
     }
    ],
