Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1374,7 +1374,9 @@
       "count: 374\tCoord: [0.7 0.7]\t\tAcc: 29.19034090909091\tLoss: 20.987\n",
       "count: 376\tCoord: [0.9 0.7]\t\tAcc: 23.011363636363637\tLoss: 32.573\n",
       "count: 378\tCoord: [-1.   0.8]\t\tAcc: 10.866477272727273\tLoss: 78.931\n",
-      "Coord: [-0.9  0.8]\tAcc: 15\tLoss: 57.673\r"
+      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 13.991477272727273\tLoss: 50.868\n",
+      "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 19.602272727272727\tLoss: 32.363\n",
+      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 25.0\tLoss: 21.936\n"
      ]
     }
    ],
