Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1376,7 +1376,10 @@
       "count: 378\tCoord: [-1.   0.8]\t\tAcc: 10.866477272727273\tLoss: 78.931\n",
       "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 13.991477272727273\tLoss: 50.868\n",
       "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 19.602272727272727\tLoss: 32.363\n",
-      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 25.0\tLoss: 21.936\n"
+      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 25.0\tLoss: 21.936\n",
+      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 30.894886363636363\tLoss: 15.522\n",
+      "count: 388\tCoord: [0.  0.8]\t\tAcc: 35.58238636363637\tLoss: 12.733\n",
+      "Coord: [0.1 0.8]\tAcc: 39\tLoss: 14.424\r"
      ]
     }
    ],
