Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1379,7 +1379,9 @@
       "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 25.0\tLoss: 21.936\n",
       "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 30.894886363636363\tLoss: 15.522\n",
       "count: 388\tCoord: [0.  0.8]\t\tAcc: 35.58238636363637\tLoss: 12.733\n",
-      "Coord: [0.1 0.8]\tAcc: 39\tLoss: 14.424\r"
+      "count: 390\tCoord: [0.2 0.8]\t\tAcc: 34.94318181818182\tLoss: 13.015\n",
+      "count: 392\tCoord: [0.4 0.8]\t\tAcc: 32.95454545454545\tLoss: 15.945\n",
+      "count: 394\tCoord: [0.6 0.8]\t\tAcc: 28.90625\tLoss: 22.925\n"
      ]
     }
    ],
