--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1381,7 +1381,10 @@
       "count: 388\tCoord: [0.  0.8]\t\tAcc: 35.58238636363637\tLoss: 12.733\n",
       "count: 390\tCoord: [0.2 0.8]\t\tAcc: 34.94318181818182\tLoss: 13.015\n",
       "count: 392\tCoord: [0.4 0.8]\t\tAcc: 32.95454545454545\tLoss: 15.945\n",
-      "count: 394\tCoord: [0.6 0.8]\t\tAcc: 28.90625\tLoss: 22.925\n"
+      "count: 394\tCoord: [0.6 0.8]\t\tAcc: 28.90625\tLoss: 22.925\n",
+      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 22.514204545454547\tLoss: 33.684\n",
+      "count: 398\tCoord: [1.  0.8]\t\tAcc: 18.110795454545453\tLoss: 47.996\n",
+      "Coord: [-0.9  0.9]\tAcc: 8\tLoss: 82.4536\r"
      ]
     }
    ],
