--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1384,7 +1384,10 @@
       "count: 394\tCoord: [0.6 0.8]\t\tAcc: 28.90625\tLoss: 22.925\n",
       "count: 396\tCoord: [0.8 0.8]\t\tAcc: 22.514204545454547\tLoss: 33.684\n",
       "count: 398\tCoord: [1.  0.8]\t\tAcc: 18.110795454545453\tLoss: 47.996\n",
-      "Coord: [-0.9  0.9]\tAcc: 8\tLoss: 82.4536\r"
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 11.221590909090908\tLoss: 76.613\n",
+      "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 12.926136363636363\tLoss: 52.267\n",
+      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 18.394886363636363\tLoss: 36.328\n",
+      "Coord: [-0.4  0.9]\tAcc: 27\tLoss: 32.048\r"
      ]
     }
    ],
