Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1389,7 +1389,10 @@
       "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 18.394886363636363\tLoss: 36.328\n",
       "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 21.022727272727273\tLoss: 26.765\n",
       "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 25.0\tLoss: 21.106\n",
-      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 26.420454545454547\tLoss: 19.728\n"
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 26.420454545454547\tLoss: 19.728\n",
+      "count: 412\tCoord: [0.3 0.9]\t\tAcc: 26.5625\tLoss: 21.162\n",
+      "count: 414\tCoord: [0.5 0.9]\t\tAcc: 25.994318181818183\tLoss: 26.587\n",
+      "Coord: [0.6 0.9]\tAcc: 32\tLoss: 32.205\r"
      ]
     }
    ],
