--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1392,7 +1392,9 @@
       "count: 410\tCoord: [0.1 0.9]\t\tAcc: 26.420454545454547\tLoss: 19.728\n",
       "count: 412\tCoord: [0.3 0.9]\t\tAcc: 26.5625\tLoss: 21.162\n",
       "count: 414\tCoord: [0.5 0.9]\t\tAcc: 25.994318181818183\tLoss: 26.587\n",
-      "Coord: [0.6 0.9]\tAcc: 32\tLoss: 32.205\r"
+      "count: 416\tCoord: [0.7 0.9]\t\tAcc: 20.880681818181817\tLoss: 36.236\n",
+      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 17.542613636363637\tLoss: 49.302\n",
+      "count: 420\tCoord: [-1.  1.]\t\tAcc: 10.227272727272727\tLoss: 106.104\n"
      ]
     }
    ],
