Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1394,7 +1394,10 @@
       "count: 414\tCoord: [0.5 0.9]\t\tAcc: 25.994318181818183\tLoss: 26.587\n",
       "count: 416\tCoord: [0.7 0.9]\t\tAcc: 20.880681818181817\tLoss: 36.236\n",
       "count: 418\tCoord: [0.9 0.9]\t\tAcc: 17.542613636363637\tLoss: 49.302\n",
-      "count: 420\tCoord: [-1.  1.]\t\tAcc: 10.227272727272727\tLoss: 106.104\n"
+      "count: 420\tCoord: [-1.  1.]\t\tAcc: 10.227272727272727\tLoss: 106.104\n",
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 10.9375\tLoss: 78.927\n",
+      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 12.357954545454545\tLoss: 57.145\n",
+      "Coord: [-0.5  1. ]\tAcc: 18\tLoss: 46.387\r"
      ]
     }
    ],
