Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1397,7 +1397,9 @@
       "count: 420\tCoord: [-1.  1.]\t\tAcc: 10.227272727272727\tLoss: 106.104\n",
       "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 10.9375\tLoss: 78.927\n",
       "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 12.357954545454545\tLoss: 57.145\n",
-      "Coord: [-0.5  1. ]\tAcc: 18\tLoss: 46.387\r"
+      "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 15.625\tLoss: 42.743\n",
+      "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 16.761363636363637\tLoss: 34.796\n",
+      "count: 430\tCoord: [0. 1.]\t\tAcc: 18.536931818181817\tLoss: 30.362\n"
      ]
     }
    ],
