--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1399,7 +1399,10 @@
       "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 12.357954545454545\tLoss: 57.145\n",
       "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 15.625\tLoss: 42.743\n",
       "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 16.761363636363637\tLoss: 34.796\n",
-      "count: 430\tCoord: [0. 1.]\t\tAcc: 18.536931818181817\tLoss: 30.362\n"
+      "count: 430\tCoord: [0. 1.]\t\tAcc: 18.536931818181817\tLoss: 30.362\n",
+      "count: 432\tCoord: [0.2 1. ]\t\tAcc: 20.383522727272727\tLoss: 29.701\n",
+      "count: 434\tCoord: [0.4 1. ]\t\tAcc: 21.09375\tLoss: 32.657\n",
+      "Coord: [0.6 1. ]\tAcc: 25\tLoss: 41.837\r"
      ]
     }
    ],
