Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1167,10 +1167,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T23:55:46.923Z"
+     "end_time": "2019-05-04T02:59:41.727439Z",
+     "start_time": "2019-05-04T02:02:31.242412Z"
     }
    },
    "outputs": [
@@ -1450,10 +1451,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T23:55:47.971Z"
+     "end_time": "2019-05-04T02:59:46.468834Z",
+     "start_time": "2019-05-04T02:59:44.730855Z"
     },
     "code_folding": []
    },
