Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7554,7 +7554,8 @@
       "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 24.21875\tLoss: 28.746\n",
       "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 18.821022727272727\tLoss: 55.947\n",
       "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 13.920454545454545\tLoss: 127.465\n",
-      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 18.110795454545453\tLoss: 38.348\n"
+      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 18.110795454545453\tLoss: 38.348\n",
+      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 24.289772727272727\tLoss: 20.727\n"
      ]
     }
    ],
