--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7456,7 +7456,11 @@
       "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.795454545454545\tLoss: 55.392\n",
       "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 14.559659090909092\tLoss: 30.789\n",
       "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 18.394886363636363\tLoss: 20.703\n",
-      "Coord: [-0.5 -0.8]\tAcc: 24\tLoss: 18.144\r"
+      "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 23.93465909090909\tLoss: 15.243\n",
+      "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 28.40909090909091\tLoss: 13.473\n",
+      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 34.09090909090909\tLoss: 11.332\n",
+      "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 30.539772727272727\tLoss: 12.073\n",
+      "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 22.727272727272727\tLoss: 17.988\n"
      ]
     }
    ],
