Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7531,7 +7531,9 @@
       "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 27.05965909090909\tLoss: 17.848\n",
       "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 23.508522727272727\tLoss: 19.06\n",
       "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 18.110795454545453\tLoss: 23.095\n",
-      "Coord: [ 0.6 -0.9]\tAcc: 20\tLoss: 28.338\r"
+      "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 16.335227272727273\tLoss: 29.964\n",
+      "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 14.985795454545455\tLoss: 41.663\n",
+      "Coord: [ 1.  -0.9]\tAcc: 14\tLoss: 55.291\r"
      ]
     }
    ],
