Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7533,7 +7533,9 @@
       "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 18.110795454545453\tLoss: 23.095\n",
       "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 16.335227272727273\tLoss: 29.964\n",
       "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 14.985795454545455\tLoss: 41.663\n",
-      "Coord: [ 1.  -0.9]\tAcc: 14\tLoss: 55.291\r"
+      "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.866477272727273\tLoss: 59.004\n",
+      "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 17.045454545454547\tLoss: 32.518\n",
+      "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 25.852272727272727\tLoss: 19.649\n"
      ]
     }
    ],
