--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7460,7 +7460,11 @@
       "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 28.40909090909091\tLoss: 13.473\n",
       "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 34.09090909090909\tLoss: 11.332\n",
       "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 30.539772727272727\tLoss: 12.073\n",
-      "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 22.727272727272727\tLoss: 17.988\n"
+      "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 22.727272727272727\tLoss: 17.988\n",
+      "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 15.056818181818182\tLoss: 31.489\n",
+      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 11.505681818181818\tLoss: 54.198\n",
+      "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 9.303977272727273\tLoss: 111.649\n",
+      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 13.778409090909092\tLoss: 31.81\n"
      ]
     }
    ],
