Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7535,7 +7535,9 @@
       "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 14.985795454545455\tLoss: 41.663\n",
       "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.866477272727273\tLoss: 59.004\n",
       "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 17.045454545454547\tLoss: 32.518\n",
-      "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 25.852272727272727\tLoss: 19.649\n"
+      "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 25.852272727272727\tLoss: 19.649\n",
+      "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 35.65340909090909\tLoss: 14.643\n",
+      "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 38.84943181818182\tLoss: 13.398\n"
      ]
     }
    ],
