--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7464,7 +7464,12 @@
       "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 15.056818181818182\tLoss: 31.489\n",
       "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 11.505681818181818\tLoss: 54.198\n",
       "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 9.303977272727273\tLoss: 111.649\n",
-      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 13.778409090909092\tLoss: 31.81\n"
+      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 13.778409090909092\tLoss: 31.81\n",
+      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 19.744318181818183\tLoss: 19.999\n",
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 25.923295454545453\tLoss: 13.181\n",
+      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 34.73011363636363\tLoss: 9.608\n",
+      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 41.76136363636363\tLoss: 8.244\n",
+      "Coord: [ 0.  -0.7]\tAcc: 51\tLoss: 7.595\r"
      ]
     }
    ],
