Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7555,7 +7555,16 @@
       "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 18.821022727272727\tLoss: 55.947\n",
       "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 13.920454545454545\tLoss: 127.465\n",
       "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 18.110795454545453\tLoss: 38.348\n",
-      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 24.289772727272727\tLoss: 20.727\n"
+      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 24.289772727272727\tLoss: 20.727\n",
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 31.889204545454547\tLoss: 12.0\n",
+      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 42.40056818181818\tLoss: 7.807\n",
+      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 48.65056818181818\tLoss: 6.486\n",
+      "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 50.21306818181818\tLoss: 6.682\n",
+      "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 43.96306818181818\tLoss: 8.927\n",
+      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 34.30397727272727\tLoss: 14.384\n",
+      "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 23.650568181818183\tLoss: 27.492\n",
+      "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 19.105113636363637\tLoss: 59.906\n",
+      "Coord: [ 1.  -0.7]\tAcc: 14\tLoss: 106.281\r"
      ]
     }
    ],
