--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7537,7 +7537,10 @@
       "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 17.045454545454547\tLoss: 32.518\n",
       "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 25.852272727272727\tLoss: 19.649\n",
       "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 35.65340909090909\tLoss: 14.643\n",
-      "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 38.84943181818182\tLoss: 13.398\n"
+      "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 38.84943181818182\tLoss: 13.398\n",
+      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 37.42897727272727\tLoss: 13.356\n",
+      "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 33.80681818181818\tLoss: 13.333\n",
+      "Coord: [ 0.3 -0.8]\tAcc: 35\tLoss: 14.882\r"
      ]
     }
    ],
