Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7540,7 +7540,9 @@
       "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 38.84943181818182\tLoss: 13.398\n",
       "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 37.42897727272727\tLoss: 13.356\n",
       "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 33.80681818181818\tLoss: 13.333\n",
-      "Coord: [ 0.3 -0.8]\tAcc: 35\tLoss: 14.882\r"
+      "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 27.698863636363637\tLoss: 16.039\n",
+      "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 21.164772727272727\tLoss: 21.887\n",
+      "Coord: [ 0.7 -0.8]\tAcc: 17\tLoss: 28.871\r"
      ]
     }
    ],
