Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7542,7 +7542,9 @@
       "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 33.80681818181818\tLoss: 13.333\n",
       "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 27.698863636363637\tLoss: 16.039\n",
       "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 21.164772727272727\tLoss: 21.887\n",
-      "Coord: [ 0.7 -0.8]\tAcc: 17\tLoss: 28.871\r"
+      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 16.832386363636363\tLoss: 31.543\n",
+      "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 13.423295454545455\tLoss: 49.432\n",
+      "Coord: [-1.  -0.7]\tAcc: 16\tLoss: 54.836\r"
      ]
     }
    ],
