Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7473,7 +7473,11 @@
       "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 35.79545454545455\tLoss: 9.973\n",
       "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 25.142045454545453\tLoss: 16.845\n",
       "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 14.985795454545455\tLoss: 30.613\n",
-      "Coord: [ 0.8 -0.7]\tAcc: 14\tLoss: 51.798\r"
+      "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 11.221590909090908\tLoss: 61.433\n",
+      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 13.210227272727273\tLoss: 36.552\n",
+      "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 16.90340909090909\tLoss: 20.621\n",
+      "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 26.775568181818183\tLoss: 12.838\n",
+      "Coord: [-0.4 -0.6]\tAcc: 56\tLoss: 6.6373\r"
      ]
     }
    ],
