--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7564,7 +7564,15 @@
       "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 34.30397727272727\tLoss: 14.384\n",
       "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 23.650568181818183\tLoss: 27.492\n",
       "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 19.105113636363637\tLoss: 59.906\n",
-      "Coord: [ 1.  -0.7]\tAcc: 14\tLoss: 106.281\r"
+      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 16.477272727272727\tLoss: 40.055\n",
+      "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 23.579545454545453\tLoss: 20.003\n",
+      "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 35.22727272727273\tLoss: 10.804\n",
+      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 46.02272727272727\tLoss: 6.074\n",
+      "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 56.17897727272727\tLoss: 4.275\n",
+      "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 60.72443181818182\tLoss: 3.963\n",
+      "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 58.23863636363637\tLoss: 4.822\n",
+      "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 48.72159090909091\tLoss: 7.454\n",
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 36.29261363636363\tLoss: 13.584\n"
      ]
     }
    ],
