Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7544,7 +7544,9 @@
       "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 21.164772727272727\tLoss: 21.887\n",
       "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 16.832386363636363\tLoss: 31.543\n",
       "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 13.423295454545455\tLoss: 49.432\n",
-      "Coord: [-1.  -0.7]\tAcc: 16\tLoss: 54.836\r"
+      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 14.417613636363637\tLoss: 39.303\n",
+      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 24.360795454545453\tLoss: 20.709\n",
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 37.00284090909091\tLoss: 13.031\n"
      ]
     }
    ],
