Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7477,7 +7477,11 @@
       "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 13.210227272727273\tLoss: 36.552\n",
       "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 16.90340909090909\tLoss: 20.621\n",
       "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 26.775568181818183\tLoss: 12.838\n",
-      "Coord: [-0.4 -0.6]\tAcc: 56\tLoss: 6.6373\r"
+      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 39.41761363636363\tLoss: 7.836\n",
+      "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 50.99431818181818\tLoss: 5.425\n",
+      "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 56.46306818181818\tLoss: 4.689\n",
+      "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 51.5625\tLoss: 5.486\n",
+      "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 38.56534090909091\tLoss: 9.277\n"
      ]
     }
    ],
