--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7546,7 +7546,9 @@
       "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 13.423295454545455\tLoss: 49.432\n",
       "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 14.417613636363637\tLoss: 39.303\n",
       "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 24.360795454545453\tLoss: 20.709\n",
-      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 37.00284090909091\tLoss: 13.031\n"
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 37.00284090909091\tLoss: 13.031\n",
+      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 45.02840909090909\tLoss: 10.709\n",
+      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 46.80397727272727\tLoss: 9.757\n"
      ]
     }
    ],
