--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7548,7 +7548,10 @@
       "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 24.360795454545453\tLoss: 20.709\n",
       "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 37.00284090909091\tLoss: 13.031\n",
       "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 45.02840909090909\tLoss: 10.709\n",
-      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 46.80397727272727\tLoss: 9.757\n"
+      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 46.80397727272727\tLoss: 9.757\n",
+      "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 45.52556818181818\tLoss: 9.075\n",
+      "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 38.35227272727273\tLoss: 10.458\n",
+      "Coord: [ 0.4 -0.7]\tAcc: 41\tLoss: 12.238\r"
      ]
     }
    ],
