Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7481,7 +7481,12 @@
       "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 50.99431818181818\tLoss: 5.425\n",
       "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 56.46306818181818\tLoss: 4.689\n",
       "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 51.5625\tLoss: 5.486\n",
-      "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 38.56534090909091\tLoss: 9.277\n"
+      "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 38.56534090909091\tLoss: 9.277\n",
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 23.792613636363637\tLoss: 18.042\n",
+      "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 14.0625\tLoss: 37.32\n",
+      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 10.014204545454545\tLoss: 78.216\n",
+      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 17.400568181818183\tLoss: 23.071\n",
+      "Coord: [-0.8 -0.5]\tAcc: 25\tLoss: 17.181\r"
      ]
     }
    ],
