--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7572,7 +7572,16 @@
       "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 60.72443181818182\tLoss: 3.963\n",
       "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 58.23863636363637\tLoss: 4.822\n",
       "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 48.72159090909091\tLoss: 7.454\n",
-      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 36.29261363636363\tLoss: 13.584\n"
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 36.29261363636363\tLoss: 13.584\n",
+      "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 24.076704545454547\tLoss: 28.436\n",
+      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 17.116477272727273\tLoss: 72.167\n",
+      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 22.37215909090909\tLoss: 21.51\n",
+      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 32.17329545454545\tLoss: 10.89\n",
+      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 49.00568181818182\tLoss: 5.432\n",
+      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 62.5\tLoss: 3.059\n",
+      "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 70.52556818181819\tLoss: 2.208\n",
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 69.95738636363636\tLoss: 2.44\n",
+      "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 62.28693181818182\tLoss: 3.749\n"
      ]
     }
    ],
