Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7551,7 +7551,9 @@
       "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 46.80397727272727\tLoss: 9.757\n",
       "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 45.52556818181818\tLoss: 9.075\n",
       "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 38.35227272727273\tLoss: 10.458\n",
-      "Coord: [ 0.4 -0.7]\tAcc: 41\tLoss: 12.238\r"
+      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 28.125\tLoss: 14.796\n",
+      "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 20.170454545454547\tLoss: 22.935\n",
+      "Coord: [ 0.8 -0.7]\tAcc: 17\tLoss: 31.381\r"
      ]
     }
    ],
