Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7486,7 +7486,11 @@
       "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 14.0625\tLoss: 37.32\n",
       "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 10.014204545454545\tLoss: 78.216\n",
       "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 17.400568181818183\tLoss: 23.071\n",
-      "Coord: [-0.8 -0.5]\tAcc: 25\tLoss: 17.181\r"
+      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 25.568181818181817\tLoss: 13.485\n",
+      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 41.12215909090909\tLoss: 7.48\n",
+      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 56.81818181818182\tLoss: 4.118\n",
+      "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 66.19318181818181\tLoss: 2.817\n",
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 67.04545454545455\tLoss: 2.864\n"
      ]
     }
    ],
