--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7553,7 +7553,9 @@
       "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 38.35227272727273\tLoss: 10.458\n",
       "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 28.125\tLoss: 14.796\n",
       "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 20.170454545454547\tLoss: 22.935\n",
-      "Coord: [ 0.8 -0.7]\tAcc: 17\tLoss: 31.381\r"
+      "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 14.630681818181818\tLoss: 37.47\n",
+      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 12.926136363636363\tLoss: 46.849\n",
+      "Coord: [-0.8 -0.6]\tAcc: 32\tLoss: 24.713\r"
      ]
     }
    ],
