--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7555,7 +7555,9 @@
       "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 20.170454545454547\tLoss: 22.935\n",
       "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 14.630681818181818\tLoss: 37.47\n",
       "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 12.926136363636363\tLoss: 46.849\n",
-      "Coord: [-0.8 -0.6]\tAcc: 32\tLoss: 24.713\r"
+      "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 20.3125\tLoss: 24.214\n",
+      "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 36.57670454545455\tLoss: 13.24\n",
+      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 48.65056818181818\tLoss: 9.009\n"
      ]
     }
    ],
