Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7490,7 +7490,12 @@
       "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 41.12215909090909\tLoss: 7.48\n",
       "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 56.81818181818182\tLoss: 4.118\n",
       "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 66.19318181818181\tLoss: 2.817\n",
-      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 67.04545454545455\tLoss: 2.864\n"
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 67.04545454545455\tLoss: 2.864\n",
+      "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 54.97159090909091\tLoss: 4.614\n",
+      "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 36.29261363636363\tLoss: 10.023\n",
+      "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 18.963068181818183\tLoss: 23.528\n",
+      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 12.713068181818182\tLoss: 49.568\n",
+      "Coord: [ 1.  -0.5]\tAcc: 9\tLoss: 81.2822\r"
      ]
     }
    ],
