--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7581,7 +7581,16 @@
       "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 62.5\tLoss: 3.059\n",
       "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 70.52556818181819\tLoss: 2.208\n",
       "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 69.95738636363636\tLoss: 2.44\n",
-      "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 62.28693181818182\tLoss: 3.749\n"
+      "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 62.28693181818182\tLoss: 3.749\n",
+      "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 49.57386363636363\tLoss: 7.067\n",
+      "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 35.72443181818182\tLoss: 14.661\n",
+      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 21.732954545454547\tLoss: 34.721\n",
+      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 20.880681818181817\tLoss: 25.537\n",
+      "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 31.392045454545453\tLoss: 11.929\n",
+      "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 47.58522727272727\tLoss: 5.675\n",
+      "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 65.26988636363636\tLoss: 2.704\n",
+      "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 78.125\tLoss: 1.41\n",
+      "Coord: [ 0.  -0.4]\tAcc: 110\tLoss: 0.696\r"
      ]
     }
    ],
