--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7557,7 +7557,10 @@
       "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 12.926136363636363\tLoss: 46.849\n",
       "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 20.3125\tLoss: 24.214\n",
       "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 36.57670454545455\tLoss: 13.24\n",
-      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 48.65056818181818\tLoss: 9.009\n"
+      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 48.65056818181818\tLoss: 9.009\n",
+      "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 54.75852272727273\tLoss: 7.049\n",
+      "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 56.32102272727273\tLoss: 6.188\n",
+      "Coord: [ 0.1 -0.6]\tAcc: 66\tLoss: 5.481\r"
      ]
     }
    ],
