Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7495,7 +7495,11 @@
       "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 36.29261363636363\tLoss: 10.023\n",
       "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 18.963068181818183\tLoss: 23.528\n",
       "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 12.713068181818182\tLoss: 49.568\n",
-      "Coord: [ 1.  -0.5]\tAcc: 9\tLoss: 81.2822\r"
+      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 15.553977272727273\tLoss: 27.905\n",
+      "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 23.863636363636363\tLoss: 15.571\n",
+      "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 38.13920454545455\tLoss: 8.224\n",
+      "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 59.01988636363637\tLoss: 3.892\n",
+      "Coord: [-0.3 -0.4]\tAcc: 82\tLoss: 2.649\r"
      ]
     }
    ],
