--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7560,7 +7560,9 @@
       "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 48.65056818181818\tLoss: 9.009\n",
       "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 54.75852272727273\tLoss: 7.049\n",
       "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 56.32102272727273\tLoss: 6.188\n",
-      "Coord: [ 0.1 -0.6]\tAcc: 66\tLoss: 5.481\r"
+      "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 52.84090909090909\tLoss: 6.331\n",
+      "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 41.05113636363637\tLoss: 8.829\n",
+      "Coord: [ 0.5 -0.6]\tAcc: 44\tLoss: 11.976\r"
      ]
     }
    ],
