Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7562,7 +7562,9 @@
       "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 56.32102272727273\tLoss: 6.188\n",
       "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 52.84090909090909\tLoss: 6.331\n",
       "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 41.05113636363637\tLoss: 8.829\n",
-      "Coord: [ 0.5 -0.6]\tAcc: 44\tLoss: 11.976\r"
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 27.201704545454547\tLoss: 15.248\n",
+      "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 18.25284090909091\tLoss: 26.418\n",
+      "Coord: [ 1.  -0.6]\tAcc: 21\tLoss: 44.739\r"
      ]
     }
    ],
