Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7499,7 +7499,11 @@
       "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 23.863636363636363\tLoss: 15.571\n",
       "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 38.13920454545455\tLoss: 8.224\n",
       "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 59.01988636363637\tLoss: 3.892\n",
-      "Coord: [-0.3 -0.4]\tAcc: 82\tLoss: 2.649\r"
+      "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 72.23011363636364\tLoss: 2.019\n",
+      "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 78.33806818181819\tLoss: 1.416\n",
+      "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 73.86363636363636\tLoss: 1.96\n",
+      "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 55.04261363636363\tLoss: 4.727\n",
+      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 29.332386363636363\tLoss: 13.859\n"
      ]
     }
    ],
