Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7590,7 +7590,16 @@
       "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 47.58522727272727\tLoss: 5.675\n",
       "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 65.26988636363636\tLoss: 2.704\n",
       "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 78.125\tLoss: 1.41\n",
-      "Coord: [ 0.  -0.4]\tAcc: 110\tLoss: 0.696\r"
+      "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 81.81818181818181\tLoss: 1.073\n",
+      "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 76.98863636363636\tLoss: 1.667\n",
+      "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 64.3465909090909\tLoss: 3.357\n",
+      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 48.29545454545455\tLoss: 7.557\n",
+      "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 32.10227272727273\tLoss: 18.196\n",
+      "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 20.880681818181817\tLoss: 47.399\n",
+      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 26.5625\tLoss: 14.583\n",
+      "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 41.47727272727273\tLoss: 6.59\n",
+      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 61.64772727272727\tLoss: 2.896\n",
+      "Coord: [-0.4 -0.3]\tAcc: 86\tLoss: 2.593\r"
      ]
     }
    ],
