--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7564,7 +7564,9 @@
       "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 41.05113636363637\tLoss: 8.829\n",
       "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 27.201704545454547\tLoss: 15.248\n",
       "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 18.25284090909091\tLoss: 26.418\n",
-      "Coord: [ 1.  -0.6]\tAcc: 21\tLoss: 44.739\r"
+      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 12.713068181818182\tLoss: 47.8\n",
+      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 18.039772727272727\tLoss: 29.407\n",
+      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 31.25\tLoss: 14.791\n"
      ]
     }
    ],
