--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7566,7 +7566,10 @@
       "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 18.25284090909091\tLoss: 26.418\n",
       "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 12.713068181818182\tLoss: 47.8\n",
       "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 18.039772727272727\tLoss: 29.407\n",
-      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 31.25\tLoss: 14.791\n"
+      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 31.25\tLoss: 14.791\n",
+      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 49.92897727272727\tLoss: 8.338\n",
+      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 60.08522727272727\tLoss: 5.427\n",
+      "Coord: [-0.2 -0.5]\tAcc: 77\tLoss: 5.253\r"
      ]
     }
    ],
