Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7569,7 +7569,9 @@
       "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 31.25\tLoss: 14.791\n",
       "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 49.92897727272727\tLoss: 8.338\n",
       "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 60.08522727272727\tLoss: 5.427\n",
-      "Coord: [-0.2 -0.5]\tAcc: 77\tLoss: 5.253\r"
+      "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 65.41193181818181\tLoss: 4.069\n",
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 66.26420454545455\tLoss: 3.617\n",
+      "Coord: [ 0.2 -0.5]\tAcc: 77\tLoss: 4.534\r"
      ]
     }
    ],
