Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7508,7 +7508,11 @@
       "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 10.9375\tLoss: 70.07\n",
       "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 20.02840909090909\tLoss: 19.024\n",
       "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 32.31534090909091\tLoss: 10.182\n",
-      "Coord: [-0.6 -0.3]\tAcc: 47\tLoss: 7.425\r"
+      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 54.26136363636363\tLoss: 4.431\n",
+      "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 74.28977272727273\tLoss: 1.837\n",
+      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 86.00852272727273\tLoss: 0.763\n",
+      "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 86.93181818181819\tLoss: 0.614\n",
+      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 74.5028409090909\tLoss: 1.794\n"
      ]
     }
    ],
