Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7599,7 +7599,16 @@
       "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 26.5625\tLoss: 14.583\n",
       "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 41.47727272727273\tLoss: 6.59\n",
       "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 61.64772727272727\tLoss: 2.896\n",
-      "Coord: [-0.4 -0.3]\tAcc: 86\tLoss: 2.593\r"
+      "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 79.75852272727273\tLoss: 1.177\n",
+      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 89.84375\tLoss: 0.5\n",
+      "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 87.9971590909091\tLoss: 0.578\n",
+      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 79.47443181818181\tLoss: 1.39\n",
+      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 61.57670454545455\tLoss: 3.817\n",
+      "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 42.54261363636363\tLoss: 9.782\n",
+      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 27.911931818181817\tLoss: 25.125\n",
+      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 21.37784090909091\tLoss: 19.181\n",
+      "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 35.79545454545455\tLoss: 8.591\n",
+      "Coord: [-0.7 -0.2]\tAcc: 50\tLoss: 6.588\r"
      ]
     }
    ],
