Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7571,7 +7571,9 @@
       "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 60.08522727272727\tLoss: 5.427\n",
       "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 65.41193181818181\tLoss: 4.069\n",
       "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 66.26420454545455\tLoss: 3.617\n",
-      "Coord: [ 0.2 -0.5]\tAcc: 77\tLoss: 4.534\r"
+      "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 56.53409090909091\tLoss: 4.954\n",
+      "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 40.19886363636363\tLoss: 8.984\n",
+      "Coord: [ 0.7 -0.5]\tAcc: 29\tLoss: 19.688\r"
      ]
     }
    ],
