Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7573,7 +7573,9 @@
       "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 66.26420454545455\tLoss: 3.617\n",
       "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 56.53409090909091\tLoss: 4.954\n",
       "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 40.19886363636363\tLoss: 8.984\n",
-      "Coord: [ 0.7 -0.5]\tAcc: 29\tLoss: 19.688\r"
+      "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 25.071022727272727\tLoss: 17.265\n",
+      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 17.1875\tLoss: 33.577\n",
+      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 15.056818181818182\tLoss: 37.348\n"
      ]
     }
    ],
