--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7512,7 +7512,12 @@
       "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 74.28977272727273\tLoss: 1.837\n",
       "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 86.00852272727273\tLoss: 0.763\n",
       "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 86.93181818181819\tLoss: 0.614\n",
-      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 74.5028409090909\tLoss: 1.794\n"
+      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 74.5028409090909\tLoss: 1.794\n",
+      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 46.44886363636363\tLoss: 6.858\n",
+      "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 22.301136363636363\tLoss: 20.359\n",
+      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 12.784090909090908\tLoss: 46.623\n",
+      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 17.897727272727273\tLoss: 24.484\n",
+      "Coord: [-0.9 -0.2]\tAcc: 21\tLoss: 17.847\r"
      ]
     }
    ],
