--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7575,7 +7575,10 @@
       "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 40.19886363636363\tLoss: 8.984\n",
       "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 25.071022727272727\tLoss: 17.265\n",
       "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 17.1875\tLoss: 33.577\n",
-      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 15.056818181818182\tLoss: 37.348\n"
+      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 15.056818181818182\tLoss: 37.348\n",
+      "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 24.857954545454547\tLoss: 18.177\n",
+      "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 44.10511363636363\tLoss: 8.713\n",
+      "Coord: [-0.5 -0.4]\tAcc: 76\tLoss: 5.946\r"
      ]
     }
    ],
