Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7517,7 +7517,11 @@
       "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 22.301136363636363\tLoss: 20.359\n",
       "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 12.784090909090908\tLoss: 46.623\n",
       "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 17.897727272727273\tLoss: 24.484\n",
-      "Coord: [-0.9 -0.2]\tAcc: 21\tLoss: 17.847\r"
+      "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 26.491477272727273\tLoss: 13.197\n",
+      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 47.01704545454545\tLoss: 6.003\n",
+      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 71.44886363636364\tLoss: 2.16\n",
+      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 86.2215909090909\tLoss: 0.619\n",
+      "Coord: [-0.1 -0.2]\tAcc: 121\tLoss: 0.155\r"
      ]
     }
    ],
