--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7608,7 +7608,15 @@
       "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 27.911931818181817\tLoss: 25.125\n",
       "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 21.37784090909091\tLoss: 19.181\n",
       "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 35.79545454545455\tLoss: 8.591\n",
-      "Coord: [-0.7 -0.2]\tAcc: 50\tLoss: 6.588\r"
+      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 55.32670454545455\tLoss: 3.705\n",
+      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 77.13068181818181\tLoss: 1.359\n",
+      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 91.61931818181819\tLoss: 0.357\n",
+      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 96.16477272727273\tLoss: 0.128\n",
+      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 90.55397727272727\tLoss: 0.415\n",
+      "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 76.8465909090909\tLoss: 1.625\n",
+      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 55.61079545454545\tLoss: 5.3\n",
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 34.94318181818182\tLoss: 14.579\n",
+      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 24.147727272727273\tLoss: 36.621\n"
      ]
     }
    ],
