--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7578,7 +7578,9 @@
       "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 15.056818181818182\tLoss: 37.348\n",
       "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 24.857954545454547\tLoss: 18.177\n",
       "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 44.10511363636363\tLoss: 8.713\n",
-      "Coord: [-0.5 -0.4]\tAcc: 76\tLoss: 5.946\r"
+      "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 62.71306818181818\tLoss: 5.0\n",
+      "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 73.7215909090909\tLoss: 2.808\n",
+      "Coord: [-0.1 -0.4]\tAcc: 93\tLoss: 2.0855\r"
      ]
     }
    ],
