Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7521,7 +7521,11 @@
       "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 47.01704545454545\tLoss: 6.003\n",
       "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 71.44886363636364\tLoss: 2.16\n",
       "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 86.2215909090909\tLoss: 0.619\n",
-      "Coord: [-0.1 -0.2]\tAcc: 121\tLoss: 0.155\r"
+      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 95.45454545454545\tLoss: 0.173\n",
+      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 90.9090909090909\tLoss: 0.388\n",
+      "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 67.75568181818181\tLoss: 2.814\n",
+      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 36.07954545454545\tLoss: 11.176\n",
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 16.477272727272727\tLoss: 29.744\n"
      ]
     }
    ],
