--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7580,7 +7580,9 @@
       "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 44.10511363636363\tLoss: 8.713\n",
       "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 62.71306818181818\tLoss: 5.0\n",
       "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 73.7215909090909\tLoss: 2.808\n",
-      "Coord: [-0.1 -0.4]\tAcc: 93\tLoss: 2.0855\r"
+      "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 78.26704545454545\tLoss: 1.907\n",
+      "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 71.73295454545455\tLoss: 2.31\n",
+      "Coord: [ 0.4 -0.4]\tAcc: 72\tLoss: 4.575\r"
      ]
     }
    ],
