Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7582,7 +7582,9 @@
       "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 73.7215909090909\tLoss: 2.808\n",
       "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 78.26704545454545\tLoss: 1.907\n",
       "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 71.73295454545455\tLoss: 2.31\n",
-      "Coord: [ 0.4 -0.4]\tAcc: 72\tLoss: 4.575\r"
+      "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 56.67613636363637\tLoss: 4.705\n",
+      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 38.63636363636363\tLoss: 9.978\n",
+      "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 22.727272727272727\tLoss: 21.945\n"
      ]
     }
    ],
